<resources>
    <string name="app_name">Amazon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_account">My Account</string>
    <string name="my_orders">My Orders</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <!--    strings in profile fragment-->
    <string name="email">Email : %s</string>
    <string name="profile_name">Name : %$</string>
    <string name="profile_phone">Phone : %$</string>
    <string name="no_data_found">No Data Found</string>
    <string name="show_more"><![CDATA[See More >>]]></string>
    <string name="price">%s EGP</string>
    <string name="total">Total : %s</string>
    <string name="itemsInCart">SubTotal Items(%d)</string>
    <string name="cart_price">price : %s EGP</string>
    <string name="checkout_price"> %s EGP</string>
    <string name="cart_total_price_product">total price : %s EGP</string>
    <string name="total_price">Total Price</string>
    <string name="checkout">Checkout</string>
    <string name="image">image</string>
    <string name="remove">Remove</string>
</resources>