<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="Profile"
            android:textSize="@dimen/_25sdp"
            android:textAlignment="center"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ProfileImageIV"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_130sdp"
            android:src="@drawable/icon"
            android:layout_marginBottom="@dimen/_28sdp"/>



        <TextView
            android:id="@+id/ProfileEmailTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_5sdp"
            android:layout_marginStart="20dp"
            android:text="@string/email"
            android:textSize="@dimen/_17sdp" />
        <TextView
            android:id="@+id/ProfileNameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_5sdp"
            android:layout_marginStart="20dp"
            android:text="@string/profile_name"
            android:textSize="@dimen/_17sdp" />

        <TextView
            android:id="@+id/ProfilePhoneTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_5sdp"
            android:layout_marginStart="20dp"
            android:text="@string/profile_phone"
            android:textSize="@dimen/_17sdp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
  android:layout_marginBottom="@dimen/_50sdp"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ProfileSettingBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="#1E2C88"
            android:text="setting"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ProfileLogOutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="#1E2C88"
            android:text="Log out"
            android:textColor="@color/white"
            android:textStyle="bold"

            />
    </LinearLayout>

</RelativeLayout>