<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_535sdp"
    android:orientation="vertical"
    android:paddingBottom="@dimen/_50sdp"
    tools:context=".HomeScreen.BuyPage">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/_10sdp">

        <TextView
            android:id="@+id/Total_Items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/itemsInCart"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/BuySubTotalPriceNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:maxLines="1"
            android:text="0 $"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/DeliveryPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Total_Items"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="Delivery Price"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/BuyDeliveryPriceNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/BuySubTotalPriceNum"
            android:layout_alignStart="@id/BuySubTotalPriceNum"
            android:layout_marginTop="@dimen/_10sdp"
            android:maxLines="1"
            android:text="0 $"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/BuyDeliveryPriceNumber"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/total_price"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/BuyLastTotalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/BuyDeliveryPriceNumber"
            android:layout_alignStart="@id/BuyDeliveryPriceNumber"
            android:layout_marginTop="@dimen/_10sdp"
            android:maxLines="1"
            android:text="0 $"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/BuyLastTotalPrice"
            android:layout_marginHorizontal="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_11sdp"
            android:background="@color/black"
            android:text="@string/checkout"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />
    </RelativeLayout>


    <include
        android:id="@+id/CartInclude"
        layout="@layout/product_layout" />


</LinearLayout>